--- a/public/Kanbas/Account/Profile/screen.html
+++ b/public/Kanbas/Account/Profile/screen.html
@@ -1,1 +1,1 @@
-<li><a href="Profile/profilescreen.html">Profile</a></li>
+<li><a href="Profile/profilescreen.html">Profile Screen Under Construction</a></li>
