--- a/public/Kanbas/Courses/Grades/grades.html
+++ b/public/Kanbas/Courses/Grades/grades.html
@@ -2,9 +2,9 @@
     <tr>
         <td>
             <ul>
-                <li><a href="Account/Profile/screen.html">Account</a> </li>
+                <li><a href="/public/Kanbas/Account/index.html">Account</a> </li>
                 <li><a href="#">Dashboard</a> </li>
-                <li><a href="Courses/index.html">Courses</a> </li>
+                <li><a href="/public/Kanbas/Courses/index.html">Courses</a> </li>
                 <li><a href="#">Calendar</a> </li>
                 <li><a href="#">Inbox</a> </li>
                 <li><a href="#">History</a> </li>
@@ -16,13 +16,13 @@
 
         <td>
             <ul>
-                <li><a href="Home/screen.html">Home</a> </li>
+                <li><a href="/public/Kanbas/index.html">Home</a> </li>
                 <li><a href="#">Modules</a> </li>
                 <li><a href="#">Piazza</a> </li>
                 <li><a href="#">Zoom Meetings</a> </li>
-                <li><a href="Assignments/index.html">Assignments</a> </li>
+                <li><a href="/public/Kanbas/Courses/Assignments/index.html">Assignments</a> </li>
                 <li><a href="#">Quizzes</a> </li>
-                <li><a href="grades.html">Grades</a> </li>
+                <li><a href="/public/Kanbas/Courses/Grades/grades.html">Grades</a> </li>
                 <li><a href="#">People</a> </li>
                 <li><a href="#">Panopto Video</a> </li>
                 <li><a href="#">Discussions</a> </li>
