--- a/public/Kanbas/Settings/navigationtab.html
+++ b/public/Kanbas/Settings/navigationtab.html
@@ -3,37 +3,39 @@
         <!-- First Column: Your provided links -->
         <td>
             <ul>
-                <li><a href="/public/Kanbas/Account/Profile/screen.html">Account</a></li>
-                <li><a href="#">Dashboard</a></li>
-                <li><a href="/public/Kanbas/Courses/index.html">Courses</a></li>
-                <li><a href="#">Calendar</a></li>
-                <li><a href="#">Inbox</a></li>
-                <li><a href="#">History</a></li>
-                <li><a href="#">Studio</a></li>
-                <li><a href="#">Commons</a></li>
-                <li><a href="#">Help</a></li>
+                <li><a href="/public/Kanbas/Account/index.html">Account</a> </li>
+                <li><a href="#">Dashboard</a> </li>
+                <li><a href="/public/Kanbas/Courses/index.html">Courses</a> </li>
+                <li><a href="#">Calendar</a> </li>
+                <li><a href="#">Inbox</a> </li>
+                <li><a href="#">History</a> </li>
+                <li><a href="#">Studio</a> </li>
+                <li><a href="#">Commons</a> </li>
+                <li><a href="#">Help</a> </li>
             </ul>
         </td>
+
         <td>
             <ul>
-                <li><a href="/public/Kanbas/Home/screen.html">Home</a></li>
-                <li><a href="#">Modules</a></li>
-                <li><a href="#">Piazza</a></li>
-                <li><a href="#">Zoom Meetings</a></li>
-                <li><a href="/public/Kanbas/Assignments/index.html">Assignments</a></li>
-                <li><a href="#">Quizzes</a></li>
-                <li><a href="/public/Kanbas/grades.html">Grades</a></li>
-                <li><a href="#">People</a></li>
-                <li><a href="#">Panopto Video</a></li>
-                <li><a href="#">Discussions</a></li>
-                <li><a href="#">Announcements</a></li>
-                <li><a href="#">Pages</a></li>
-                <li><a href="#">Files</a></li>
-                <li><a href="#">Rubrics</a></li>
-                <li><a href="#">Outcomes</a></li>
-                <li><a href="#">Collaborations</a></li>
-                <li><a href="#">Syllabus</a></li>
+                <li><a href="/public/Kanbas/index.html">Home</a> </li>
+                <li><a href="#">Modules</a> </li>
+                <li><a href="#">Piazza</a> </li>
+                <li><a href="#">Zoom Meetings</a> </li>
+                <li><a href="/public/Kanbas/Courses/Assignments/index.html">Assignments</a> </li>
+                <li><a href="#">Quizzes</a> </li>
+                <li><a href="/public/Kanbas/Courses/Grades/grades.html">Grades</a> </li>
+                <li><a href="#">People</a> </li>
+                <li><a href="#">Panopto Video</a> </li>
+                <li><a href="#">Discussions</a> </li>
+                <li><a href="#">Announcements</a> </li>
+                <li><a href="#">Pages</a> </li>
+                <li><a href="#">Files</a> </li>
+                <li><a href="#">Rubrics</a> </li>
+                <li><a href="#">Outcomes</a> </li>
+                <li><a href="#">Collaborations</a> </li>
+                <li><a href="#">Syllabus</a> </li>
                 <li><a href="/public/Kanbas/Settings/coursedetails.html">Settings</a></li>
+                
             </ul>
         </td>
         <td>                
