--- a/public/Kanbas/index.html
+++ b/public/Kanbas/index.html
@@ -2,9 +2,9 @@
     <tr>
         <td>
             <ul>
-                <li><a href="/public/Kanbas/Account/Profile/screen.html">Account</a> </li>
+                <li><a href="./Account/Profile/screen.html">Account</a> </li>
                 <li><a href="#">Dashboard</a> </li>
-                <li><a href="/public/Kanbas/Courses/index.html">Courses</a> </li>
+                <li><a href="./Courses/">Courses</a> </li>
                 <li><a href="#">Calendar</a> </li>
                 <li><a href="#">Inbox</a> </li>
                 <li><a href="#">History</a> </li>
@@ -16,13 +16,13 @@
 
         <td>
             <ul>
-                <li><a href="screen.html">Home</a> </li>
+                <li><a href="index.html">Home</a> </li>
                 <li><a href="#">Modules</a> </li>
                 <li><a href="#">Piazza</a> </li>
                 <li><a href="#">Zoom Meetings</a> </li>
-                <li><a href="/public/Kanbas/Assignments/index.html">Assignments</a> </li>
+                <li><a href="./Courses/Assignments/index.html">Assignments</a> </li>
                 <li><a href="#">Quizzes</a> </li>
-                <li><a href="/public/Kanbas/grades.html">Grades</a> </li>
+                <li><a href="./Courses/Grades/grades.html">Grades</a> </li>
                 <li><a href="#">People</a> </li>
                 <li><a href="#">Panopto Video</a> </li>
                 <li><a href="#">Discussions</a> </li>
