--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,16 @@
     <title>React App</title>
   </head>
   <body>
+    <ul>
+      <li><a href="./labs/screen.html">Labs</a></li>
+      <li><a href="./Kanbas/index.html">KANABAS</a></li>
+    </ul>
+
+    
+    
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <!-- <div id="root"></div> -->
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
