Updated link errors

--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,8 @@
   </head>
   <body>
     <ul>
-      <li><a href="./labs/screen.html">Labs</a></li>
-      <li><a href="./Kanbas/index.html">KANABAS</a></li>
+      <li><a href="labs/screen.html">Labs</a></li>
+      <li><a href="Kanbas/index.html">KANABAS</a></li>
     </ul>
 
     
