--- a/public/Kanbas/Courses/Assignments/index.html
+++ b/public/Kanbas/Courses/Assignments/index.html
@@ -2,7 +2,7 @@
     <tr>
         <td>
             <ul>
-                <li><a href="/public/Kanbas/Account/index.html">Account</a> </li>
+                <li><a href="../../Account/index.html">Account</a> </li>
                 <li><a href="#">Dashboard</a> </li>
                 <li><a href="/public/Kanbas/Courses/index.html">Courses</a> </li>
                 <li><a href="#">Calendar</a> </li>
