--- a/public/Kanbas/Account/Profile/edit.html
+++ b/public/Kanbas/Account/Profile/edit.html
@@ -2,9 +2,9 @@
     <tr>
         <td>
             <ul>
-                <li><a href="/public/Kanbas/Account/Profile/screen.html">Account</a> </li>
+                <li><a href="../../Account/index.html">Account</a> </li>
                 <li><a href="#">Dashboard</a> </li>
-                <li><a href="/public/Kanbas/Courses/index.html">Courses</a> </li>
+                <li><a href="../../Courses/index.html">Courses</a> </li>
                 <li><a href="#">Calendar</a> </li>
                 <li><a href="#">Inbox</a> </li>
                 <li><a href="#">History</a> </li>
