--- a/public/Kanbas/Account/Profile/index.html
+++ b/public/Kanbas/Account/Profile/index.html
@@ -2,9 +2,9 @@
     <tr>
         <td>
             <ul>
-                <li><a href="/public/Kanbas/Account/Profile/screen.html">Account</a> </li>
+                <li><a href="../../Account/index.html">Account</a> </li>
                 <li><a href="#">Dashboard</a> </li>
-                <li><a href="/public/Kanbas/Courses/index.html">Courses</a> </li>
+                <li><a href="../../Courses/index.html">Courses</a> </li>
                 <li><a href="#">Calendar</a> </li>
                 <li><a href="#">Inbox</a> </li>
                 <li><a href="#">History</a> </li>
@@ -17,7 +17,7 @@
         <td>
             <ul>
                 <li><a href="#">Notifications</a> </li>
-                <li><a href="#">Profile</a> </li>
+                <li><a href="./index.html">Profile</a> </li>
                 <li><a href="#">Files</a> </li>
                 <li><a href="#">Settings</a> </li>
                 <li><a href="#">ePortfolios</a> </li>
