--- a/public/Kanbas/KanbasNavigation/index.html
+++ b/public/Kanbas/KanbasNavigation/index.html
@@ -1,7 +1,7 @@
 <ul>
-    <li><a href="#">Account</a> </li>
+    <li><a href="../Account/index.html">Account</a> </li>
     <li><a href="#">Dashboard</a> </li>
-    <li><a href="#">Courses</a> </li>
+    <li><a href="../Courses/index.html">Courses</a> </li>
     <li><a href="#">Calendar</a> </li>
     <li><a href="#">Inbox</a> </li>
     <li><a href="#">History</a> </li>
@@ -9,3 +9,4 @@
     <li><a href="#">Commons</a> </li>
     <li><a href="#">Help</a> </li>
 </ul>
+
