--- a/public/Kanbas/Settings/coursedetails.html
+++ b/public/Kanbas/Settings/coursedetails.html
@@ -3,9 +3,9 @@
         <!-- First Column: Your provided links -->
         <td>
             <ul>
-                <li><a href="/public/Kanbas/Account/index.html">Account</a> </li>
+                <li><a href="../Account/index.html">Account</a> </li>
                 <li><a href="#">Dashboard</a> </li>
-                <li><a href="/public/Kanbas/Courses/index.html">Courses</a> </li>
+                <li><a href="../Courses/index.html">Courses</a> </li>
                 <li><a href="#">Calendar</a> </li>
                 <li><a href="#">Inbox</a> </li>
                 <li><a href="#">History</a> </li>
@@ -17,13 +17,13 @@
 
         <td>
             <ul>
-                <li><a href="/public/Kanbas/index.html">Home</a> </li>
+                <li><a href="../index.html">Home</a> </li>
                 <li><a href="#">Modules</a> </li>
                 <li><a href="#">Piazza</a> </li>
                 <li><a href="#">Zoom Meetings</a> </li>
-                <li><a href="/public/Kanbas/Courses/Assignments/index.html">Assignments</a> </li>
+                <li><a href="../Courses/Assignments/index.html">Assignments</a> </li>
                 <li><a href="#">Quizzes</a> </li>
-                <li><a href="/public/Kanbas/Courses/Grades/grades.html">Grades</a> </li>
+                <li><a href="../Courses/Grades/grades.html">Grades</a> </li>
                 <li><a href="#">People</a> </li>
                 <li><a href="#">Panopto Video</a> </li>
                 <li><a href="#">Discussions</a> </li>
@@ -34,7 +34,7 @@
                 <li><a href="#">Outcomes</a> </li>
                 <li><a href="#">Collaborations</a> </li>
                 <li><a href="#">Syllabus</a> </li>
-                <li><a href="/public/Kanbas/Settings/coursedetails.html">Settings</a></li>
+                <li><a href="../Settings/index.html">Settings</a></li>
                 
             </ul>
         </td>
