--- a/public/Kanbas/index.html
+++ b/public/Kanbas/index.html
@@ -2,9 +2,9 @@
     <tr>
         <td>
             <ul>
-                <li><a href="./Account/Profile/screen.html">Account</a> </li>
+                <li><a href="./Account/index.html">Account</a> </li>
                 <li><a href="#">Dashboard</a> </li>
-                <li><a href="./Courses/">Courses</a> </li>
+                <li><a href="./Courses/index.html">Courses</a> </li>
                 <li><a href="#">Calendar</a> </li>
                 <li><a href="#">Inbox</a> </li>
                 <li><a href="#">History</a> </li>
@@ -33,7 +33,7 @@
                 <li><a href="#">Outcomes</a> </li>
                 <li><a href="#">Collaborations</a> </li>
                 <li><a href="#">Syllabus</a> </li>
-                <li><a href="/public/Kanbas/Settings/coursedetails.html">Settings</a></li>
+                <li><a href="./Settings/index.html">Settings</a></li>
                 
             </ul>
         </td>
