A3 Lab Assignment finished

--- a/public/labs/a2/index.html
+++ b/public/labs/a2/index.html
@@ -13,7 +13,25 @@
         
      </head>
 <body>
-<h1>Cascading Style Sheets (CSS)</h1>
+<h1>option 1</h1>
+
+<style>
+  .padding {
+    border: 1px green solid;
+    border-top: 10px red solid;
+    border-left: 20px blue solid;
+    padding-left: 30px;
+    padding-top: 40px;
+    background-color: yellow;
+  }
+</style>
+</head>
+<body>
+<div class="padding">
+  Hello World!
+</div>
+</body>
+
 <h2>Style attribute and tag</h2>
 <h3>Style attribute</h3>
 <p style="background-color: blue; color: white">
